# FeatureRec

./: .gitignore  CMakeLists.txt  FeactureRec.kdev4  ModelFace.h  README.md  doxygenfile.bak  math.h  testmain.cpp
html/: ModelEdge_8h_source.html  ModelFace_8h_source.html  annotated.html  bend_8h_source.html  classBend-members.html  classBend.html  classModelEdge-members.html  classModelEdge.html  classModelFace-members.html  classModelFace.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  math_8h_source.html  testtopo_8h_source.html
html/search/: all_62.js  all_63.js  all_70.js  classes_6d.js  functions_73.js  search.js
iges/: 001_s-bend1.igs  002_FileC.igs  AA00001150869_AO_STIFFENER-GEN_END WINDOW.igs  EF.igs
iges/mina/: 001_vvvvv.igs  001_yyyy.igs  002_TEST12__.igs  002_TEST4.igs  002_TEST6.igs  002_TEST7.igs  002_TEST9__.igs  002_test15__.igs  002_test2.igs  002_test3.igs  003_hhhhh.igs  003_kkmmlm.igs  003_mlmom.igs
iges/test/mina/: 001_jtrhrhr.igs
iges/test/will/: 002_FileD.igs  002_FileF.igs
include/: CMakeLists.txt  IgesProcessor.h  ModelEdge.h  ModelFace.h  ModelLineEquation.h  ModelMath.h  ModelReaderClass.h  ModelUtils.h  ModelVertex.h  StepProcessor.h  bend.h  testtopo.h
include/0unused/: testtopo.h
include/config/: CMakeLists.txt  Session.cpp  Session.h
include/db/: BendFeature.h  CMakeLists.txt  ModelFile.h  Project.cpp  Project.h  Tool.h  User.cpp  User.h
include/libfxtract/: CMakeLists.txt  IgesProcessor.cpp  IgesProcessor.h  MFace.cpp  MFace.h  Model.cpp  Model.h  ModelApp.cpp  ModelApp.h  ModelBend.cpp  ModelBend.h  ModelEdge.cpp  ModelEdge.h  ModelFace.cpp  ModelFace.h  ModelMath.cpp  ModelMath.h  ModelMath.tcc  ModelProcessor.cpp  ModelProcessor.h  ModelReader.cpp  ModelReader.h  ModelReaderClass.cpp  ModelReaderClass.h  ModelUtils.cpp  ModelUtils.h  ModelVertex.cpp  ModelVertex.h  StepProcessor.cpp  StepProcessor.h
include/ui/: CMakeLists.txt  FileDropApplication.C  FileDropApplication.h
include/unused/: bend.h
latex/: annotated.tex  classBend.eps  classBend.tex  classModelEdge.tex  classModelFace.eps  classModelFace.tex  hierarchy.tex  refman.tex
model test files/iges/: 002_FileB.igs  GLWH.igs  GLWH1.igs  Test1.igs  flat.iges  mixed.igs
model test files/iges/mina/: 001_xxxx.igs  002_TEST10__.igs  002_TEST11.igs  002_TEST14__.igs  002_TEST5.igs  002_TEST8__.igs  002_file.igs  002_test1.igs  002_test16.igs  003_jnkknknk.igs  003_ppppppp.igs
model test files/iges/test/mina/: 001_90.igs
model test files/iges/test/will/: 002_FileE.igs
model test files/new/: 1500-30.IGS  90-90.IGS  90-base-90.IGS  bend outside.IGS  mat outside.IGS
model test files/new1/: AA00001149605_CO_POST ZEE - SH.stp  AA00001184434_AO_ASSY ZEE HVAC.igs  AA00001184716_A1_ASSY ZEE HVAC.stp
model test files/new2/: AA00001098209.iam  AAD0001149621.ipt  Assy Corrugated.dwg  Co Post Zee.dwg  Stiffener Gen Centre.dwg
new/: 150-30.IGS  30 & 150.IGS  30-150.IGS  90-90-90-90-90.IGS  90-90-90.IGS  90.IGS  new flange 30 - 150.IGS
new1/: AA00001106762_AO_REINFORCEMENT.igs  AA00001106762_AO_REINFORCEMENT.stp  AA00001184434_AO_ASSY ZEE HVAC1.igs  AA00001184716_A1_ASSY ZEE HVAC.igs  AA00001184716_A1_ASSY ZEE HVAC1.igs  AA00001184766_AO_ASSY ZEE HVAC.stp
new2/: AA00001149390 Assy Corrugated.iam  AAD0001106802.ipt  AAD0001145625.ipt  Door Frame.dwg  Reinforcement.dwg
src/: CMakeLists.txt  DSDS.fcstd  Test.step  compiling_error.txt  fxtract.db  main.cpp  maintest.cpp  steptestmain.cpp  test  test.cpp  testing.cpp  testmain.cpp
